--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "build": "next build",
+    "prisma:generate": "prisma generate",
+    "build": "pnpm run prisma:generate && next build",
     "dev": "next dev --turbopack",
     "start": "next start"
   },
