--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "prisma:generate": "prisma generate",
     "build": "pnpm run prisma:generate && next build",
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "start": "next start"
   },
   "dependencies": {
